# polish-test-client

./: .gitignore  Makefile.am.in  buildconf  configure.ac  serve.php
php/: composer.json
php/src/: Polish.php  PolishObject.php  Root.php
src/: DummyObject.hpp  Makefile.am  PolishClient.cpp  PolishClient.hpp  PolishObject.hpp  Socket.cpp  Socket.hpp  Suspendable.hpp  TcpClient.cpp  TcpClient.hpp  main.cpp
src/ContractChecker/: ContractChecker.cpp  ContractChecker.hpp  Contracts.cpp  contracts.txt  contractsgenerator.php
src/Root/: Constructor.cpp  Root.cpp  Root.hpp  constructorgenerator.php
src/RootConstructor/: RootConstructor.cpp  RootConstructor.hpp  Specs.cpp_  constructorgenerator.php  specreader.php  specs.txt
src/Window/: Window.cpp  Window.hpp  WindowFactory.cpp  WindowFactory.hpp
