bin_PROGRAMS = polish
polish_SOURCES= src/main.cpp src/PolishClient.cpp src/PolishClient.hpp src/TcpClient.hpp src/TcpClient.cpp src/PolishObject.hpp src/RootConstructor/RootConstructor.hpp src/RootConstructor/RootConstructor.cpp=src/main.cpp src/PolishClient.cpp src/PolishClient.hpp src/TcpClient.hpp src/TcpClient.cpp src/PolishObject.hpp src/RootConstructor/RootConstructor.hpp src/RootConstructor/RootConstructor.cpp= = #src/main.cpp src/PolishClient.cpp src/TcpClient.cpp src/RootConstructor/RootConstructor.cpp
polish_LDADD = -lsfml-graphics -lsfml-window -lsfml-system -lsfml-network